Removed Collectors.toList, as it may cause crashes